# monei-python-sdk

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .release-it.json  .travis.yml  CHANGELOG.md  PUBLISHING.md  README.md  commitlint.config.js  config.json  git_push.sh  main.py  openapitools.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  post-build.sh  pyproject.toml  pytest.ini  requirements-lock.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.cursor/rules/: general.mdc
.github/workflows/: deploy.yml  publish.yml  python.yml  test.yml
.husky/: commit-msg  pre-commit
.openapi-generator/: FILES
.uv/: uv.toml
Monei/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  monei_client.py  rest.py
Monei/api/: __init__.py  apple_pay_certificate_api.py  apple_pay_domain_api.py  bizum_api.py  payment_methods_api.py  payments_api.py  pos_auth_token_api.py  subscriptions_api.py
Monei/apis/: __init__.py
Monei/model/: __init__.py  activate_apple_pay_certificate_request.py  activate_subscription_request.py  address.py  api_exception.py  apple_pay_certificate.py  apple_pay_certificate_delete200_response.py  apple_pay_certificate_remove200_response.py  apple_pay_certificates_remove200_response.py  apple_pay_domain_register200_response.py  apple_pay_domain_register400_response.py  apple_pay_domain_register401_response.py  apple_pay_domain_register404_response.py  apple_pay_domain_register422_response.py  apple_pay_domain_register500_response.py  apple_pay_domain_register503_response.py  bad_request_error.py  bad_request_error_all_of.py  bizum_validate_phone200_response.py  browser_color_depth.py  browser_screen_height.py  browser_screen_width.py  browser_timezone_offset.py  cancel_payment_request.py  cancel_subscription_request.py  capture_payment_request.py  card.py  confirm_payment_request.py  confirm_payment_request_payment_method.py  confirm_payment_request_payment_method_card.py  create_payment_request.py  create_pos_auth_token_request.py  create_subscription_request.py  domain_register200_response.py  error.py  error_base.py  internal_server_error.py  internal_server_error_all_of.py  not_found_error.py  not_found_error_all_of.py  (+81 more)
Monei/models/: __init__.py  activate_subscription_request.py  address.py  apple_pay_domain_register200_response.py  bizum_validate_phone200_response.py  cancel_payment_request.py  cancel_subscription_request.py  capture_payment_request.py  card.py  confirm_payment_request.py  confirm_payment_request_payment_method.py  confirm_payment_request_payment_method_card.py  create_payment_request.py  create_subscription_request.py  error.py  inline_object.py  inline_response200.py  inline_response2001.py  pause_subscription_request.py  payment.py  payment_methods.py  (+67 more)
Monei2/: __init__.py  configuration.py  exceptions.py  monei_client.py
docs/: Address.md  CancelPaymentRequest.md  CapturePaymentRequest.md  Card.md  ConfirmPaymentRequest.md  CreatePaymentRequest.md  Error.md  Payment.md  PaymentBillingDetails.md  PaymentCancellationReason.md  PaymentCustomer.md  PaymentLastRefundReason.md  PaymentNextAction.md  PaymentPaymentMethod.md  PaymentPaymentMethodBizum.md  PaymentPaymentMethodCard.md  PaymentPaymentMethodInput.md  PaymentPaymentMethodPaypal.md  PaymentRefundReason.md  PaymentSequence.md  PaymentSequenceRecurring.md  PaymentSessionDetails.md  PaymentShippingDetails.md  PaymentShop.md  PaymentStatus.md  PaymentTraceDetails.md  PaymentTransactionType.md  PaymentsApi.md  RecurringPaymentRequest.md  RefundPaymentRequest.md
monei/: rest.py
monei2/: __init__.py  api_client.py  configuration.py  monei_client.py
scripts/: build.sh  post-build.sh  release.sh
test/: conftest.py  test_account_id.py  test_activate_apple_pay_certificate_request.py  test_activate_subscription_request.py  test_address.py  test_api_client.py  test_api_client_integration.py  test_api_exception.py  test_api_key_integration.py  test_api_response.py  test_apple_pay_certificate.py  test_apple_pay_certificate_api.py  test_apple_pay_certificate_delete200_response.py  test_apple_pay_certificate_remove200_response.py  test_apple_pay_certificates_remove200_response.py  test_apple_pay_domain_api.py  test_apple_pay_domain_api_integration.py  test_apple_pay_domain_register200_response.py  test_apple_pay_domain_register400_response.py  test_apple_pay_domain_register401_response.py  test_apple_pay_domain_register404_response.py  test_apple_pay_domain_register422_response.py  test_apple_pay_domain_register500_response.py  test_apple_pay_domain_register503_response.py  test_bad_request_error.py  test_bad_request_error_all_of.py  test_bizum_api.py  test_bizum_api_integration.py  test_bizum_validate_phone200_response.py  test_browser_color_depth.py  test_browser_screen_height.py  test_browser_screen_width.py  test_browser_timezone_offset.py  test_cancel_payment_request.py  test_cancel_subscription_request.py  test_capture_payment_request.py  test_card.py  test_client.py  test_configuration.py  test_confirm_payment_request.py  (+120 more)
(+39 files in other folders)
