[build-system]
requires = [ "hatchling>=1.0.0" ]
build-backend = "hatchling.build"

[project]
name = "Monei"
version = "2.1.0"
description = "MONEI PYTHON SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "urllib3 >= 1.25.3, < 3.0.0",
  "python-dateutil >= 2.8.2",
  "pydantic >= 2",
  "typing-extensions >= 4.7.1",
  "certifi"
]
keywords = [
  "monei",
  "monei pay",
  "pay",
  "payments",
  "payment gateway",
  "python",
  "sdk",
  "rest",
  "api"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

  [project.license]
  text = "MIT"

  [[project.authors]]
  name = "MONEI"
  email = "admin@monei.com"

  [project.urls]
  Repository = "https://github.com/monei/monei-python-sdk"

[dependency-groups]
dev = [
  "pytest >= 7.2.1",
  "pytest-cov >= 2.8.1",
  "types-python-dateutil >= 2.8.19.14",
  "mypy >= 1.5"
]

[tool]
uv = { }

[tool.hatch.build.targets.wheel]
packages = [ "Monei" ]

  [tool.hatch.build.targets.wheel.force-include]
  "Monei/py.typed" = "Monei/py.typed"

[tool.pytest.ini_options]
testpaths = [ "test" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
addopts = [
  "--cov=Monei",
  "--cov-report=term",
  "--cov-report=xml:coverage.xml",
  "--ignore=test/test_apple_pay_domain_register400_response.py",
  "--ignore=test/test_apple_pay_domain_register401_response.py",
  "--ignore=test/test_apple_pay_domain_register404_response.py",
  "--ignore=test/test_apple_pay_domain_register422_response.py",
  "--ignore=test/test_apple_pay_domain_register500_response.py",
  "--ignore=test/test_apple_pay_domain_register503_response.py",
  "--ignore=test/test_browser_color_depth.py",
  "--ignore=test/test_browser_screen_height.py",
  "--ignore=test/test_browser_screen_width.py",
  "--ignore=test/test_browser_timezone_offset.py",
  "--ignore=test/test_error.py",
  "--ignore=test/test_model_utils.py",
  "--ignore=test/test_payment_example.py",
  "--ignore=test/test_rest_example.py",
  "--ignore=test/test_payments_api_example.py"
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "api: API tests",
  "slow: Slow running tests",
  "e2e: End-to-end tests",
  "generated: Tests auto-generated by OpenAPI Generator",
  "requires_api: Tests that require real API access"
]
filterwarnings = [
  "ignore::DeprecationWarning:Monei.*:",
  "ignore::DeprecationWarning:urllib3.*:"
]
norecursedirs = [ ".git", ".venv", "node_modules" ]

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"

  [tool.mypy]
  files = [ "Monei", "test" ]
  warn_unused_configs = true
  warn_redundant_casts = true
  warn_unused_ignores = true
  strict_equality = true
  extra_checks = true
  check_untyped_defs = true
  disallow_subclassing_any = true
  disallow_untyped_decorators = true
  disallow_any_generics = true

    [[tool.mypy.overrides]]
    module = [ "Monei.configuration" ]
    warn_unused_ignores = true
    strict_equality = true
    extra_checks = true
    check_untyped_defs = true
    disallow_subclassing_any = true
    disallow_untyped_decorators = true
    disallow_any_generics = true
    disallow_untyped_calls = true
    disallow_incomplete_defs = true
    disallow_untyped_defs = true
    no_implicit_reexport = true
    warn_return_any = true
